--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,12 @@
 !/log/.keep
 !/tmp/.keep
 
+**/.DS_Store
+
 /node_modules
 /yarn-error.log
 
 .byebug_history
+
+# Ignore encrypted secrets key file.
+config/secrets.yml.key
